# twitter_blocklist

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  run.sh  run_twitter_blocklist.ipynb  test_utils.ipynb
.github/workflows/: my_blocks_backup.csv  python-package.yml  reset_bot_blocks.sh
src/twitter_blocklist/: __init__.py  console.py  utils.py
testing/: reset_bot_blocks.sh
twitter_blocklist/: console.py  utils.py
