[tool.poetry]
name = "twitter_blocklist"
version = "0.1.0"
description = "Export and import Twitter blocklists"
authors = ["Andrea Zonca <code@andreazonca.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-twitter = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
