[tool.poetry]
name = "twitter_blocklist"
version = "0.5.3"
description = "Export and import Twitter blocklists"
authors = ["Andrea Zonca <code@andreazonca.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zonca/twitter_blocklist"

[tool.poetry.dependencies]
python = "^3.7"
python-twitter = "^3.5"
toml = "^0.10.1"
click = "^7.1.2"
progressbar2 = "^3.51.3"
importlib-metadata = {version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipython = "^7.15.0"

[tool.poetry.scripts]
twitter_blocklist = "twitter_blocklist.console:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

